add image uploader middleware
