# be/src/api/routes/productRoutes.ts
@@ -26,7 +26,7 @@ export const productRouter = Router();
  *             schema:
  *               type: array
  *               items:
- *                 $ref: '#/components/schemas/Product'
+ *                 $ref: '#/components/schemas/ProductOutput'
  *       '500':
  *         description: Unexpected server error
  *         $ref: '#/components/responses/InternalServerError'
@@ -36,41 +36,41 @@ productRouter.get('/', getAllProducts);
 /**
  * @openapi
  * /product:
- *   post:
- *     tags:
- *       - product
- *     summary: Add a new product to the store.
- *     description: Add a new product to the store.
- *     operationId: addProduct
- *     requestBody:
- *       description: Create a new product in the store
- *       content:
- *         application/json:
- *           schema:
- *             $ref: '#/components/schemas/Product'
- *       required: true
- *     responses:
- *       '200':
- *         description: Successful operation
- *         content:
- *           application/json:
- *             schema:
- *               $ref: '#/components/schemas/Product'
- *       '400':
- *         description: Invalid input
- *         $ref: '#/components/responses/BadRequestError'
- *       '422':
- *         description: Validation exception
- *         $ref: '#/components/responses/UnprocessableEntityError'
- *       '500':
- *         description: Unexpected server error
- *         $ref: '#/components/responses/InternalServerError'
+ *  post:
+ *    tags:
+ *      - product
+ *    summary: Add a new product to the store.
+ *    description: Add a new product to the store, including image.
+ *    operationId: addProduct
+ *    requestBody:
+ *      description: Create a new product in the store
+ *      content:
+ *        multipart/form-data:
+ *          schema:
+ *            $ref: '#/components/schemas/ProductInput'
+ *      required: true
+ *    responses:
+ *      '201':
+ *        description: Product created successfully
+ *        content:
+ *          application/json:
+ *            schema:
+ *              $ref: '#/components/schemas/ProductOutput'
+ *      '400':
+ *        description: Invalid input
+ *        $ref: '#/components/responses/BadRequestError'
+ *      '422':
+ *        description: Validation exception
+ *        $ref: '#/components/responses/UnprocessableEntityError'
+ *      '500':
+ *        description: Unexpected server error
+ *        $ref: '#/components/responses/InternalServerError'
  */
 productRouter.post('/', insertProduct);
 
 /**
  * @openapi
- * /product:
+ * /product/{productId}:
  *   put:
  *     tags:
  *       - product
@@ -82,7 +82,7 @@ productRouter.post('/', insertProduct);
  *       content:
  *         application/json:
  *           schema:
- *             $ref: '#/components/schemas/Product'
+ *             $ref: '#/components/schemas/ProductInput'
  *       required: true
  *     responses:
  *       '200':
@@ -90,7 +90,7 @@ productRouter.post('/', insertProduct);
  *         content:
  *           application/json:
  *             schema:
- *               $ref: '#/components/schemas/Product'
+ *               $ref: '#/components/schemas/ProductOutput'
  *       '400':
  *         description: Invalid ID supplied
  *         $ref: '#/components/responses/BadRequestError'
@@ -104,7 +104,7 @@ productRouter.post('/', insertProduct);
  *         description: Unexpected server error
  *         $ref: '#/components/responses/InternalServerError'
  */
-productRouter.put('/', modifyProduct);
+productRouter.put('/:id', modifyProduct);
 
 /**
  * @openapi
@@ -129,7 +129,7 @@ productRouter.put('/', modifyProduct);
  *          content:
  *            application/json:
  *              schema:
- *                $ref: '#/components/schemas/Product'
+ *                $ref: '#/components/schemas/ProductOutput'
  *        '400':
  *          description: Invalid ID supplied
  *          $ref: '#/components/responses/BadRequestError'
