# be/src/api/schemas/openapi.json
@@ -68,7 +68,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/Product"
+                    "$ref": "#/components/schemas/ProductOutput"
                   }
                 }
               }
@@ -85,26 +85,26 @@
           "product"
         ],
         "summary": "Add a new product to the store.",
-        "description": "Add a new product to the store.",
+        "description": "Add a new product to the store, including image.",
         "operationId": "addProduct",
         "requestBody": {
           "description": "Create a new product in the store",
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
-                "$ref": "#/components/schemas/Product"
+                "$ref": "#/components/schemas/ProductInput"
               }
             }
           },
           "required": true
         },
         "responses": {
-          "200": {
-            "description": "Successful operation",
+          "201": {
+            "description": "Product created successfully",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Product"
+                  "$ref": "#/components/schemas/ProductOutput"
                 }
               }
             }
@@ -122,7 +122,9 @@
             "$ref": "#/components/responses/InternalServerError"
           }
         }
-      },
+      }
+    },
+    "/product/{productId}": {
       "put": {
         "tags": [
           "product"
@@ -135,7 +137,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/Product"
+                "$ref": "#/components/schemas/ProductInput"
               }
             }
           },
@@ -147,7 +149,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Product"
+                  "$ref": "#/components/schemas/ProductOutput"
                 }
               }
             }
@@ -169,9 +171,7 @@
             "$ref": "#/components/responses/InternalServerError"
           }
         }
-      }
-    },
-    "/product/{productId}": {
+      },
       "get": {
         "tags": [
           "product"
@@ -197,7 +197,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Product"
+                  "$ref": "#/components/schemas/ProductOutput"
                 }
               }
             }
@@ -301,8 +301,8 @@
           "required": true
         },
         "responses": {
-          "200": {
-            "description": "Successful operation",
+          "201": {
+            "description": "Product created successfully",
             "content": {
               "application/json": {
                 "schema": {
@@ -511,11 +511,6 @@
           "quantity"
         ],
         "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64",
-            "example": 0
-          },
           "title": {
             "type": "string",
             "example": "Penna"
@@ -528,18 +523,51 @@
             "$ref": "#/components/schemas/Category"
           },
           "price": {
-            "type": "number",
-            "format": "double",
+            "type": "string",
             "example": 9.99
           },
           "quantity": {
-            "type": "integer",
-            "format": "int64",
+            "type": "string",
             "example": 10
+          }
+        }
+      },
+      "ProductInput": {
+        "description": "Product Model Input",
+        "type": "object",
+        "allOf": [
+          {
+            "$ref": "#/components/schemas/Product"
+          }
+        ],
+        "properties": {
+          "image": {
+            "type": "string",
+            "format": "binary",
+            "description": "Image file for the product"
+          }
+        }
+      },
+      "ProductOutput": {
+        "description": "Product Model Output",
+        "type": "object",
+        "required": [
+          "id",
+          "imageUrl"
+        ],
+        "allOf": [
+          {
+            "$ref": "#/components/schemas/Product"
+          }
+        ],
+        "properties": {
+          "id": {
+            "type": "number",
+            "example": 0
           },
           "imageUrl": {
             "type": "string",
-            "example": "https://localohost:8080/img/img1.jpg"
+            "description": "Image path for the product"
           }
         }
       },
